# flow-rust-sdk

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
proto/: flow.proto
src/: lib.rs  monolithic.rs
