[package]
name = "flow-rust-sdk"
version = "0.6.2"
edition = "2018"

[dependencies]
tonic = "0.5"
prost = "0.8"
hex = "0.4.3"
rlp = "0.5.1"
bytes = { version = "1", features = ["serde"] }
serde-rlp = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
rand_core = "0.6.3"
p256 = {git = "https://github.com/MarshallBelles/elliptic-curves.git", branch = "master", features= ["ecdsa"]}
ecdsa = { git = "https://github.com/MarshallBelles/signatures.git" }
elliptic-curve = { git = "https://github.com/MarshallBelles/traits.git" }

[dev-dependencies]
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.68"

[build-dependencies]
tonic-build = "0.5"