[package]
name = "flow-rust-sdk"
version = "3.8.0"
edition = "2018"
license = "Apache-2.0 OR MIT"
description = """
Flow-Rust-SDK
utilizes the Flow gRPC AccessAPI to make requests on the flow blockchain.
"""
repository = "https://github.com/MarshallBelles/flow-rust-sdk"
readme = "README.md"


[dependencies]
tonic = "0.5"
prost = "0.8"
hex = "0.4.3"
rlp = "0.5.1"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand_core = "0.6.3"
p256_flow = { version = "1.0.0", features= ["ecdsa"]}
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.68"

[build-dependencies]
tonic-build = "0.5"
